# QuantumDMLimits

./: LICENSE  README.md  environment.yml  pyproject.toml
configs/: config_low_mass_th.py
curves/2512.08065v2/: HEPData-ins3091049-v2-SI_cross_section.yaml
curves/PhysRevD.107.063001/outputs/: darkside50_NQ_limit.csv
curves/matlab/outputs/: scdms_hv_cd2_p90median.csv
curves/panda/outputs/: pandax4t_2025.csv
notebooks/: digitize_2512.08065v2.ipynb  digitize_PhysRevD107063001.ipynb  digitize_matlab_scdms_hv_cd2.ipynb  digitize_panda.ipynb  plot_curves.ipynb  plot_low_mass_th.ipynb  plot_scdms_comp.ipynb
qdmlimits/: __init__.py  calibration.py  cli.py  extraction.py  pdf.py
